--- a/index.html
+++ b/index.html
@@ -2,43 +2,55 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
+  <title>Tip-calculator</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tip calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div role="banner" class="header"></div>
+  <div class="container">
+    <div role="main" class="main">
+     <h1 class="section">Bill </h1>
+     <div class="icon-dollar"></div><input type="text" class="bill input validated-field" id="bill-amount" placeholder="0" maxlength="5">
+     <h2 class="section"> Select tip % </h2>
+    <div class="percent-choice"> 
+     <input type="button" class="button" id="percent-5" value="5%" ></input>
+     <input type="button" class="button" id="percent-10" value="10%" onclick="calcTip()"></input>
+     <input type="button" class="button" id="percent-15" value="15%" onclick="calcTip()"></input>
+     <input type="button" class="button" id="percent-25" value="25%" onclick="calcTip()"></input>
+     <input type="button" class="button" id="percent-50" value="50%" onclick="calcTip()"></input>
+     <input type="text" class="input-custom validated-field" id="custom" placeholder="Custom" maxlength="3">          </input> 
+   </div>
+   <div class="section-number"> 
+     <h1 class="section"> Number of people </h1>
+     <label id="incorrect"></label>
+   </div>
+ <div class="icon-person"></div> <input type="text" class="number-of-people input validated-field" placeholder="0" id="people-amount" maxlength="4">
   </div>
+  
+  <div role="contentinfo" class="summary">
+    <div class="tip">
+      <span>
+        <h3 class="summary-text">Tip amount</h3>
+        <p class="person">/ person</p> 
+      </span>
+     <label class="amount"id="tip-amount">$0.00</label>   
+   </div>
+    <div class="tip">
+      <span>
+        <h4 class="summary-text">Total</h4>
+        <p class="person">/ person</p>
+      </span>
+    <label class="amount" id="total">$0.00</label>
+    </div>
+    <button class="reset-button" id="reset">RESET</button>
+  </div>
+ </div>
+ <script src="main.js"> </script>
 </body>
 </html>
