--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
   
   <div role="contentinfo" class="summary">
     <div class="tip">
-      <span>
+      <span class="amount-text">
         <h3 class="summary-text">Tip amount</h3>
         <p class="person">/ person</p> 
-      </span>
+      </span >
      <label class="amount"id="tip-amount">$0.00</label>   
    </div>
     <div class="tip">
-      <span>
+      <span class="amount-text">
         <h4 class="summary-text">Total</h4>
         <p class="person">/ person</p>
       </span>
